fix: Fixed visual regression on the black box covering the tile

--- a/sphinx_gallery/_static/sg_gallery.css
+++ b/sphinx_gallery/_static/sg_gallery.css
@@ -178,8 +178,27 @@ thumbnail with its default link Background color */
   max-height: 112px;
   max-width: 160px;
 }
-.sphx-glr-thumbcontainer[tooltip]:hover:after {
-  background: var(--sg-tooltip-background);
+
+.sphx-glr-thumbcontainer[tooltip]::before {
+  content: "";
+  position: absolute;
+  pointer-events: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 97;
+  background-color: var(--sg-tooltip-background);
+  backdrop-filter: blur(3px);
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.sphx-glr-thumbcontainer[tooltip]:hover::before {
+  opacity: 1;
+}
+
+.sphx-glr-thumbcontainer[tooltip]:hover::after {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -188,12 +207,12 @@ thumbnail with its default link Background color */
   padding: 10px 10px 5px;
   z-index: 98;
   width: 100%;
+  max-height: 100%;
   position: absolute;
   pointer-events: none;
   top: 0;
   box-sizing: border-box;
   overflow: hidden;
-  backdrop-filter: blur(3px);
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 6;
